--- a/styles/style.css
+++ b/styles/style.css
@@ -10,20 +10,23 @@ body {
     background-image: url('../assets/background.png');
     background-repeat: no-repeat;
     background-size: cover;
+    overflow-x: hidden;
 }
 
-header {
-    padding: 20px 80px;
+nav {
+    padding: 20px 0px;
+    margin: 0 auto;
+    width: 90%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-header h1 {
+nav h1 {
     color: #38bdf7;
 }
 
-header,
+nav,
 ul {
     display: flex;
     justify-content: space-between;
@@ -32,14 +35,14 @@ ul {
     gap: 20px;
 }
 
-header,
+nav,
 ul,
 li {
     font-size: 17px;
     font-weight: 500;
 }
 
-header,
+nav,
 ul,
 li,
 a {
@@ -87,4 +90,13 @@ a {
 
 .show {
     display: block;
+}
+
+main {
+    margin: 0 auto;
+    background: red;
+    width: 90%;
+    height: fit-content;
+    display: flex;
+    justify-content: space-between;
 }
