--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Figtree';
+    font-family: 'Inter';
 }
 
 body {
@@ -13,7 +13,33 @@ body {
     overflow-x: hidden;
 }
 
-nav {
+nav .small-nav {
+    padding-top: 20px;
+    padding-bottom: 0px;
+    margin: 0 auto;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav .small-nav .small-link {
+    display: flex;
+    list-style-type: none;
+    gap: 8px;
+}
+
+nav .small-nav .small-link li {
+    font-size: 15px;
+}
+
+nav .small-nav .icon {
+    display: flex;
+    list-style-type: none;
+    gap: 10px;
+}
+
+nav .first-header {
     padding: 20px 0px;
     margin: 0 auto;
     width: 90%;
@@ -22,12 +48,11 @@ nav {
     align-items: center;
 }
 
-nav h1 {
-    color: #38bdf7;
+nav .first-header h1 {
+    color: black;
 }
 
-nav,
-ul {
+nav .first-header ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -35,19 +60,41 @@ ul {
     gap: 20px;
 }
 
-nav,
+nav .first-header,
 ul,
 li {
     font-size: 17px;
     font-weight: 500;
 }
 
-nav,
+nav .first-header,
 ul,
 li,
 a {
     text-decoration: none;
+    color: black;
+}
+
+
+
+nav .second-header {
+    background: black;
+    padding: 20px 2.5%;
+    margin: 0 auto;
+    width: 85%;
+}
+
+nav .second-header ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style-type: none;
+}
+
+nav .second-header ul li a {
+    text-decoration: none;
     color: white;
+    font-size: 15px;
 }
 
 .dropbtn {
@@ -68,7 +115,8 @@ a {
     display: none;
     position: absolute;
     margin-top: 10px;
-    background-color: #1e293b;
+    background-color: rgb(24, 24, 24);
+    box-shadow: 10px 10px 138px -4px rgba(255, 255, 255, 0.75);
     min-width: 160px;
     max-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -84,19 +132,10 @@ a {
 }
 
 .dropdown-content a:hover {
-    background-color: #212e43;
+    background-color: rgb(31, 31, 31);
     border-radius: 5px;
 }
 
 .show {
     display: block;
-}
-
-main {
-    margin: 0 auto;
-    background: red;
-    width: 90%;
-    height: fit-content;
-    display: flex;
-    justify-content: space-between;
 }
