--- a/styles/style.css
+++ b/styles/style.css
@@ -174,6 +174,12 @@ main {
     gap: 5%;
 }
 
+@media (max-width: 932px) {
+    main {
+        grid-template-columns: 100%;
+    }
+}
+
 main #content {
     background-color: blue;
 }
